--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>تاي هونج سوريا</title>
+    <title>شركة الجوادية</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -59,7 +59,7 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-lead-in">أهلا وسهلا بكم في موقعنا</div>
+          <div class="intro-lead-in">أهلا وسهلا بكم في موقع شركة الجوادية</div>
           
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">المزيد</a>
         </div>
@@ -307,7 +307,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; Your Website 2018</span>
+            <span class="copyright">Copyright &copy; كافة الحقوق محفوظة| شركة الجوادية 2019</span>
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
